--- a/ffaefu/views/index.ejs
+++ b/ffaefu/views/index.ejs
@@ -2,10 +2,21 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
+    <link rel='stylesheet' href='/stylesheets/style.css'>
   </head>
   <body>
+    <div class="wrapper">
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>Welcome to <%= title %></p>    
+    <form action="/login" method="post" class="form">
+      <span class="label">ユーザID</span><input type="text" name="userId" class="input" required>
+      <span class="label">パスワード</span><input type="password" name="password" class="input" required>
+      <button type="submit">ログイン</button>
+    </form>
+    <a href="signUp" class="btn">新規登録</a>
+    </div>
   </body>
 </html>
