ログイン機能実装成功！

--- a/ffaefu/views/login.ejs
+++ b/ffaefu/views/login.ejs
@@ -4,7 +4,7 @@
   </head>
   <body>
     <% if(loginSucceeded) {%>
-      <span class="login-user"><%= userでログインしました %></span>
+      <span class="login-user"><%= user %>でログインしました</span>
       <form action="login" method="post" class="form">
         <button type="submit">ステータス画面へ</button>
       </form>
