ログインからユーザのステータス画面への遷移を作成

--- a/ffaefu/views/index.ejs
+++ b/ffaefu/views/index.ejs
@@ -11,7 +11,7 @@
     <div class="wrapper">
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>    
-    <form action="/login" method="post" class="form">
+    <form action="" method="post" class="form">
       <span class="label">ユーザID</span><input type="text" name="userId" class="input" required>
       <span class="label">パスワード</span><input type="password" name="password" class="input" required>
       <button type="submit">ログイン</button>
