--- a/ffaefu/views/login.ejs
+++ b/ffaefu/views/login.ejs
@@ -10,6 +10,7 @@
       </form>
     <% }else{ %>
       <span class="error-message">エラー:不正なログインです</span>
+      <a href="/">TOPに戻る</a>
     <% } %>
     </body>
 </html>
