--- a/ffaefu/views/status.ejs
+++ b/ffaefu/views/status.ejs
@@ -33,9 +33,8 @@
       <form action="" method="post">
         <button type="submit">アイテム倉庫へ</button>
       </form>
-      <form action="" method="post">
-        <button type="submit">銀行へ</button>
-      </form>
+      <a href="/bank"><button>銀行へ</button></a>
+    
       <form action="" method="post">
         <button type="submit">道具屋へ</button>
       </form>
