簡易的なモンスター戦の作成

--- a/ffaefu/views/status.ejs
+++ b/ffaefu/views/status.ejs
@@ -56,7 +56,7 @@
     </div>
     <div>
       その辺を探索
-      <form action="" method="post">
+      <form action="/vsMonster" method="post">
         <select name="difficulty">
           <option value="1">そのへんの森(弱い敵が出現)</option>
           <option value="2">沖合(それなりの敵が出現)</option>
@@ -68,7 +68,7 @@
     </div>
     <div>
       勝ち抜きボスバトル
-      <form action="" method="post">
+      <form action="/vsMonster" method="post">
         <select name="difficulty">
           <option value="1">試しの洞窟</option>
           <option value="2">バーレル火山</option>
