--- a/ffaefu/views/status.ejs
+++ b/ffaefu/views/status.ejs
@@ -55,12 +55,8 @@
         <button type="submit">道具屋へ</button>
       </form>
       <a href="/weaponShop"><button>武器屋</button></a>
-      <form action="" method="post">
-        <button type="submit">防具屋へ</button>
-      </form>
-      <form action="" method="post">
-        <button type="submit">装飾品屋へ</button>
-      </form>
+      <a href="/armorShop"><button>防具屋へ</button></a>
+      <a href="/accessoryShop"><button>装飾品屋へ</button></a>
       <form action="" method="post">
         <button type="submit">転職の祠へ</button>
       </form>
