ユーザデータファイルの置き場所を変更

--- a/ffaefu/views/status.ejs
+++ b/ffaefu/views/status.ejs
@@ -47,7 +47,7 @@
     <div>
       <a href="/inn"><button>HPを回復する(有料)</button></a>
       <form action="" method="post">
-        <button type="submit">アイテム倉庫へ</button>
+        <button type="submit">装備品倉庫へ</button>
       </form>
       <a href="/bank"><button>銀行へ</button></a>
     
