転職関連を更新

--- a/ffaefu/views/status.ejs
+++ b/ffaefu/views/status.ejs
@@ -28,7 +28,7 @@
       <li>レベル: <%=user.level %></li>
       <li>経験値: <%= user.exp %>/<%= user.level*300 %></li>
       <li>所持金: <%= user.money %>C/1,000,000,000C</li>
-      <li>スタイル: <%= user.job %></li>
+      <li>スタイル: <%= job.name %></li>
       <li>スタミナ: <x id="stamina"><%= stamina %></x></li>
       <li>武器 <%=weapon.name %> 威力: <%= weapon.attack %></li>
       <li>防具 <%=armor.name %> 防御力: <%= armor.defence %></li>
