--- a/ffaefu/views/status.ejs
+++ b/ffaefu/views/status.ejs
@@ -34,9 +34,7 @@
       <li>防具 <%=armor.name %> 防御力: <%= armor.defence %></li>
       <li>装飾品 <%=accessory.name %></li>
     </ul>
-    <form action="" method="post">
-      <button type="submit">戦術を変更する</button>
-    </form>
+    <a href="changeArts"><button>戦術を変更する</button></a>
     <form action="" method="post">
       <button type="submit">チャンピオンに挑む</button>
     </form>
@@ -57,9 +55,7 @@
       <a href="/weaponShop"><button>武器屋</button></a>
       <a href="/armorShop"><button>防具屋へ</button></a>
       <a href="/accessoryShop"><button>装飾品屋へ</button></a>
-      <form action="" method="post">
-        <button type="submit">転職の祠へ</button>
-      </form>
+      <a href="/changeJob"><button>転職の祠へ</button></a>
       <a href="/status"><button>画面更新</button></a>
     </div>
     <div>
