転職機能の実装

--- a/ffaefu/views/changeArts.ejs
+++ b/ffaefu/views/changeArts.ejs
@@ -10,16 +10,23 @@
   <body>
     <h1><%= subTitle %></h1>
     <div wrapper>
-      戦術を選んでください．
-      現在の戦術:
 
-      <% changeableArts.forEach(function(element){ %>
-        <li><%= element.name %>, <%= element.explain %></li>
-      <% }); %>
-      です．このうち，マスターしていない職業は
+      <% if(mode === "selectArts") { %>
+        戦術を選んでください．
+        現在の戦術: <%= setArts.name %>
+        <form action="" method="POST">
+        <% changeableArts.forEach(function(element){ %>
+          <% let output = '<input type="radio" name="artsNumber" value="'+element.id + '">' %>
+          <li><%-  output %> <%= element.name %>, <%= element.explain %></li>
+        <% }); %>
+        <button type="submit">戦術を変更する</button>
+        </form>
+      <% }else{ %>
+          戦術を<%=setArts.name %>に変更しました！
+      <% } %>
 
-      です．転職先のジョブレベルが19以下の場合，HP以外の各ステータスが1割，カルマは2割減少します．
       
+
     <a href="/status"><button>ステータス画面へ</button></a>
     <a href="/bank"><button>銀行へ</button></a>
     <a href="/weaponShop"><button>武器屋へ</button></a>
