--- a/ffaefu/views/status.ejs
+++ b/ffaefu/views/status.ejs
@@ -57,6 +57,7 @@
       <a href="/accessoryShop"><button>装飾品屋へ</button></a>
       <a href="/changeJob"><button>転職の祠へ</button></a>
       <a href="/status"><button>画面更新</button></a>
+      <a href="/changeStatus"><button>画面更新</button></a>
     </div>
     <div>
       その辺を探索
