--- a/ffaefu/views/equipmentStorage.ejs
+++ b/ffaefu/views/equipmentStorage.ejs
@@ -9,17 +9,40 @@
   </head>
   <body>
     <h1><%= subTitle %></h1>
-    <% if(mode === "selectWeapon"){ %>
-        
+    <% if(isFinished === false){ %>
+        武器一覧
       <ul>
-      <%for(let i = 0;i < weapons.length; ++i){ %>
+      <%for(let i = 0;i < user.equipmentInventory.weapons.length; ++i){ %>
         <form action="" method="post">
           <% let input = '<input type="hidden" name="targetWeapon" value=' + '"'+i+'"' + '>' %>
+          <input type="hidden" name="mode" value="weapon">
             <%- input %>        
           <button type=submit>装備する</button> <li> 名前:<%= weapons[i].name %> , 攻撃力:<%= weapons[i].attack %>, 値段:<%= weapons[i].value %></li>
         </form>
       <% } %>
       </ul>
+      防具一覧
+      <ul>
+        <%for(let i = 0;i < user.equipmentInventory.armors.length; ++i){ %>
+          <form action="" method="post">
+            <% let input = '<input type="hidden" name="targetArmor" value=' + '"'+i+'"' + '>' %>
+            <input type="hidden" name="mode" value="armor">
+              <%- input %>        
+            <button type=submit>装備する</button> <li> 名前:<%= armors[i].name %> , 防御力:<%= armors[i].attack %>, 値段:<%= armors[i].value %></li>
+          </form>
+        <% } %>
+        </ul>
+        装飾品一覧
+        <ul>
+            <%for(let i = 0;i < user.equipmentInventory.accessories.length; ++i){ %>
+              <form action="" method="post">
+                <% let input = '<input type="hidden" name="targetAccessory" value=' + '"'+i+'"' + '>' %>
+                <input type="hidden" name="mode" value="accessory">
+                  <%- input %>        
+                <button type=submit>装備する</button> <li> 名前:<%= accessories[i].name %> , 防御力:<%= accessories[i].value %>, 値段:<%= accessories[i].explain %></li>
+              </form>
+            <% } %>
+            </ul>
     <% }else{ %>
       <%- content %>
     <% } %>
