--- a/ffaefu/views/changeStatus.ejs
+++ b/ffaefu/views/changeStatus.ejs
@@ -22,7 +22,7 @@
     <div class="wrapper">
     <h1><%= subTitle %></h1>    
     <div class="instant-status">
-    <h3><%= user.userName %>さんのステータス:</h3>
+    <h3><%= user.name %>さんのステータス:</h3>
     <ul>  
       <li>HP:<%=user.currentHP %>/<%=user.maxHP %></li>
       <li>レベル: <%=user.level %></li>
