チャンプ戦のひな型を作成

--- a/ffaefu/views/status.ejs
+++ b/ffaefu/views/status.ejs
@@ -35,8 +35,8 @@
       <li>防具 <%=armor.name %> 防御力: <%= armor.defence %></li>
       <li>装飾品 <%=accessory.name %></li>
     </ul>
-    <a href="changeArts"><button>戦術を変更する</button></a>
-    <form action="" method="post">
+    <a href="/changeArts"><button>戦術を変更する</button></a>
+    <form action="/vsChampion" method="post">
       <button type="submit">チャンピオンに挑む</button>
     </form>
     <form action="" method="post">
