レジェンドプレイスのバックエンド実装

--- a/ffaefu/views/status.ejs
+++ b/ffaefu/views/status.ejs
@@ -70,22 +70,22 @@
       その辺を探索
       <form action="/vsMonster" method="post">
         <select name="difficulty">
-          <option value="1">そのへんの森(弱い敵が出現)</option>
-          <option value="2">沖合(それなりの敵が出現)</option>
-          <option value="3">樹海(割と強い敵が出現)</option>
-          <option value="4">魔の秘境(とても強い敵が出現)</option>
+          <option value="0">そのへんの森(弱い敵が出現)</option>
+          <option value="1">沖合(それなりの敵が出現)</option>
+          <option value="2">樹海(割と強い敵が出現)</option>
+          <option value="3">魔の秘境(とても強い敵が出現)</option>
         </select>
         <button type="submit">挑む</button>
       </form>
     </div>
     <div>
       勝ち抜きボスバトル
-      <form action="/vsMonster" method="post">
+      <form action="/legendPlace" method="post">
         <select name="difficulty">
-          <option value="1">試しの洞窟</option>
-          <option value="2">バーレル火山</option>
-          <option value="3">VIPブリッヂ</option>
-          <option value="4">次元のはざま</option>
+          <option value="0">試しの洞窟</option>
+          <option value="1">バーレル火山</option>
+          <option value="2">VIPブリッヂ</option>
+          <option value="3">次元のはざま</option>
         </select>
         <button type="submit">挑む</button>
       </form>
