--- a/ffaefu/views/weaponShop.ejs
+++ b/ffaefu/views/weaponShop.ejs
@@ -9,14 +9,15 @@
   </head>
   <body>
     <h1><%= subTitle %></h1>
+    <% const formatter = new Intl.NumberFormat('ja-JP') %>
     <% if(mode === "selectWeapon"){ %>
-      なにを買うかね？
+      ここは武器屋だ．なにを買うかね？
       <ul>
       <%for(let i = 0;i < weapons.length; ++i){ %>
         <form action="" method="post">
           <% let input = '<input type="hidden" name="targetWeapon" value=' + '"'+i+'"' + '>' %>
             <%- input %>        
-          <button type=submit>買う</button> <li> 名前:<%= weapons[i].name %> , 攻撃力:<%= weapons[i].attack %>, 値段:<%= weapons[i].value %></li>
+          <button type=submit>買う</button> <li> 名前:<%= weapons[i].name %> , 攻撃力:<%= formatter.format(weapons[i].attack) %>, 値段:<%= formatter.format(weapons[i].value) %></li>
         </form>
       <% } %>
       </ul>
