--- a/ffaefu/views/equipmentStorage.ejs
+++ b/ffaefu/views/equipmentStorage.ejs
@@ -17,7 +17,7 @@
           <% let input = '<input type="hidden" name="targetWeapon" value=' + '"'+i+'"' + '>' %>
           <input type="hidden" name="mode" value="weapon">
             <%- input %>        
-          <button type=submit>装備する</button> <li> 名前:<%= weapons[i].name %> , 攻撃力:<%= weapons[i].attack %>, 値段:<%= weapons[i].value %></li>
+           <li> <button type=submit>装備する</button> 名前:<%= weapons[i].name %> , 攻撃力:<%= weapons[i].attack %>, 値段:<%= weapons[i].value %></li>
         </form>
       <% } %>
       </ul>
@@ -28,7 +28,7 @@
             <% let input = '<input type="hidden" name="targetArmor" value=' + '"'+i+'"' + '>' %>
             <input type="hidden" name="mode" value="armor">
               <%- input %>        
-            <button type=submit>装備する</button> <li> 名前:<%= armors[i].name %> , 防御力:<%= armors[i].attack %>, 値段:<%= armors[i].value %></li>
+             <li> <button type=submit>装備する</button>名前:<%= armors[i].name %> , 防御力:<%= armors[i].attack %>, 値段:<%= armors[i].value %></li>
           </form>
         <% } %>
         </ul>
@@ -39,7 +39,7 @@
                 <% let input = '<input type="hidden" name="targetAccessory" value=' + '"'+i+'"' + '>' %>
                 <input type="hidden" name="mode" value="accessory">
                   <%- input %>        
-                <button type=submit>装備する</button> <li> 名前:<%= accessories[i].name %> , 防御力:<%= accessories[i].value %>, 値段:<%= accessories[i].explain %></li>
+                 <li> <button type=submit>装備する</button>名前:<%= accessories[i].name %> , 防御力:<%= accessories[i].value %>, 値段:<%= accessories[i].explain %></li>
               </form>
             <% } %>
             </ul>
