--- a/ffaefu/views/status.ejs
+++ b/ffaefu/views/status.ejs
@@ -23,7 +23,7 @@
      <% const formatter = new Intl.NumberFormat('ja-JP') %>
     <h1><%= subTitle %></h1>    
     現在のチャンピオン:<%= champion.name %>さん
-    HP: <%= formatter.format(champion.currentHP) %>/<%=champion.maxHP %>
+    HP: <%= formatter.format(champion.currentHP) %>/<%=formatter.format(champion.maxHP) %>
     <% let homepage = '<a href="'+ champion.homePageURL+'">' + champion.homePageName + '</a>'%>
     おすすめのHP: <%- homepage %>
     <div class="instant-status">
