--- a/ffaefu/public/stylesheets/style.css
+++ b/ffaefu/public/stylesheets/style.css
@@ -102,3 +102,39 @@ span.hitAmountblue{
 span.hpRecover{
   color:#FFAA00;
 }
+
+span.hpLose{
+  color: darkviolet;
+}
+
+.btn-square {
+  display: inline-block;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  background: #000;/*ボタン色*/
+  color: #DDD;
+  border-bottom: solid 4px #627295;
+  border-radius: 3px;
+}
+.btn-square:active {
+  /*ボタンを押したとき*/
+  -webkit-transform: translateY(4px);
+  transform: translateY(4px);/*下に動く*/
+  border-bottom: none;/*線を消す*/
+}
+
+button{
+  display: inline-block;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  background: #000;/*ボタン色*/
+  color: #DDD;
+  border-bottom: solid 4px #627295;
+  border-radius: 3px;
+}
+
+button:active{
+  -webkit-transform: translateY(4px);
+  transform: translateY(4px);/*下に動く*/
+  border-bottom: none;/*線を消す*/
+}
